--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("/img/hero.png") center center no-repeat;
+  background: url("./img/hero.png") center center no-repeat;
   position: relative;
   width: 100%;
   height: 100%;
