fixed image for github pages

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -3,13 +3,13 @@
         width: 6%;
     }
     .carousel-control-prev-icon {
-        background: url("/img/prev-btn.svg") center center no-repeat;
+        background: url("./img/prev-btn.svg") center center no-repeat;
     }
     .carousel-control-next {
         width: 6%;
     }
     .carousel-control-next-icon {
-        background: url("/img/next-btn.svg") center center no-repeat;
+        background: url("./img/next-btn.svg") center center no-repeat;
     }
 
     .sub-title {
