--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -13,7 +13,7 @@
     .contact-link {
       padding-bottom: 8px;
       padding: 113px 185px 95px 95px;
-      background: url("/img/gradient-footer.png") center center no-repeat;
+      background: url("./img/gradient-footer.png") center center no-repeat;
       background-size: cover;
 
       .contact {
