--- a/app/scss/_popular-places.scss
+++ b/app/scss/_popular-places.scss
@@ -1,7 +1,7 @@
 .popular-places {
   .places {
     padding: 110px 26px 42px 26px;
-    background: url("/img/1.png") center center no-repeat;
+    background: url("./img/1.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
@@ -17,7 +17,7 @@
   }
 
   .kuala-lumpur {
-    background: url("/img/3.png") center center no-repeat;
+    background: url("./img/3.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
