--- a/app/scss/_deals.scss
+++ b/app/scss/_deals.scss
@@ -93,7 +93,7 @@
     }
 
     .card-tag {
-      background: url("/img/card_img_1.png") center center no-repeat;
+      background: url("./img/card_img_1.png") center center no-repeat;
       background-size: cover;
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
       height: 376px;
