fixed image for github pages

--- a/app/scss/_popular-places.scss
+++ b/app/scss/_popular-places.scss
@@ -24,21 +24,21 @@
   }
 
   .agra {
-    background: url("/img/2.png") center center no-repeat;
+    background: url("./img/2.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
   }
 
   .munich {
-    background: url("/img/4.png") center center no-repeat;
+    background: url("./img/4.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
   }
 
   .paris {
-    background: url("/img/5.png") center center no-repeat;
+    background: url("./img/5.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
@@ -46,7 +46,7 @@
 
   .view-more {
     padding: 92px 56px 90px;
-    background: url("/img/6.png") center center no-repeat;
+    background: url("./img/6.png") center center no-repeat;
     height: 377px;
     width: 100%;
     background-size: cover;
